# LitPyWeb

./: .gitignore  LitPyWeb.spec  README.md  aaa.py  aaaaa.py  app.py  main.py  pip-audit-report.json  pyproject.toml  report.html  request_response.py  requirements.txt  router.py  server_adapter.py  templates.py  test_fileupload_extended.py  utils.py
src/: LitPyWeb.py  application.py  control.py  multipart.py  plugin.py  routing.py  server.py  server_adapter.py  template.py  wsgi.py
test/: test_fileupload.py  test_html_helper.py  test_multipart.py  test_route.py  test_router.py  tools.py
utils/: cli.py  core_utils.py  exceptions.py  utilities.py
